# docs/swagger.json
@@ -13,7 +13,7 @@
                 "summary": "GetAll",
                 "responses": {
                     "200": {
-                        "description": "Notes",
+                        "description": "OK",
                         "schema": {
                             "type": "Note"
                         }
@@ -34,9 +34,9 @@
                 "summary": "Add",
                 "responses": {
                     "201": {
-                        "description": "Note",
+                        "description": "Created",
                         "schema": {
-                            "type": "Note"
+                            "$ref": "#/definitions/note.Note"
                         }
                     },
                     "500": {
@@ -53,10 +53,10 @@
                 ],
                 "summary": "Get",
                 "responses": {
-                    "201": {
-                        "description": "Note",
+                    "200": {
+                        "description": "OK",
                         "schema": {
-                            "type": "Note"
+                            "$ref": "#/definitions/note.Note"
                         }
                     },
                     "404": {
@@ -95,6 +95,22 @@
                     "500": {
                         "description": ""
                     }
+                }
+            }
+        }
+    },
+    "definitions": {
+        "note.Note": {
+            "type": "object",
+            "properties": {
+                "content": {
+                    "type": "string"
+                },
+                "id": {
+                    "type": "integer"
+                },
+                "title": {
+                    "type": "string"
                 }
             }
         }
